--- a/assamble/principal/templates/padre.html
+++ b/assamble/principal/templates/padre.html
@@ -11,17 +11,16 @@
     
 </head>
 <body>
-    
     <!--navbar-->
     <header class="header">
         <script src="https://kit.fontawesome.com/17f6cda60c.js" crossorigin="anonymous"></script>
         <nav class="nav">
-            
-            <a href="{% url 'inicio' %}" class="logo"><img src="{% static 'principal/assets/assamble-white.png' %} " alt="assamble co."></a>
+            <a href="{% url 'inicio' %}" class="logo"><img src="{% static 'principal/assets/assamble-white.png' %}" alt="assamble co."></a>
+           
             <ul class="nav-menu .nav-menu_visible ">
                 <li class="nav-menu-item"><a href="{% url 'sobreNosotros' %}" class="nav-menu-link nav-link">about us</a></li>
                 <li class="nav-menu-item"><a href="{% url 'contacto' %}" class="nav-menu-link nav-link">contacto</a></li>
-                <li class="nav-menu-item"><a href="{% url 'ingresar' %}" class="nav-menu-link nav-link ">ingresar</a></li>
+                <li class="nav-menu-item"><a href="{% url 'Login' %}" class="nav-menu-link nav-link ">ingresar</a></li>
                 <li class="nav-menu-item"><a href="{% url 'subirCv' %}" class="nav-menu-link nav-link nav-menu-link_active">subir cv</a></li>
             </ul>
         </nav>
