--- a/assamble/principal/templates/padre.html
+++ b/assamble/principal/templates/padre.html
@@ -20,9 +20,10 @@
             <ul class="nav-menu .nav-menu_visible ">
                 <li class="nav-menu-item"><a href="{% url 'sobreNosotros' %}" class="nav-menu-link nav-link">about us</a></li>
                 <li class="nav-menu-item"><a href="{% url 'contacto' %}" class="nav-menu-link nav-link">contacto</a></li>
-                <li class="nav-menu-item"><a href="{% url 'Login' %}" class="nav-menu-link nav-link ">ingresar</a></li>
+                <li class="nav-menu-item"><a href="{% url 'ingresar' %}" class="nav-menu-link nav-link ">ingresar</a></li>
                 <li class="nav-menu-item"><a href="{% url 'subirCv' %}" class="nav-menu-link nav-link nav-menu-link_active">subir cv</a></li>
             </ul>
+            <h1>hola</h1>
         </nav>
         
     </header>
@@ -31,7 +32,7 @@
     {% block contenido %}
     
     
-    {% endblock contenido %}
+    {% endblock %}
 
     <!--
         pie de pagina
