--- a/assamble/principal/templates/padre.html
+++ b/assamble/principal/templates/padre.html
@@ -22,6 +22,8 @@
                 <li class="nav-menu-item"><a href="{% url 'contacto' %}" class="nav-menu-link nav-link">contacto</a></li>
                 <li class="nav-menu-item"><a href="{% url 'ingresar' %}" class="nav-menu-link nav-link ">ingresar</a></li>
                 <li class="nav-menu-item"><a href="{% url 'subirCv' %}" class="nav-menu-link nav-link nav-menu-link_active">subir cv</a></li>
+                <li class="nav-menu-item"><a href="{% url 'servicios' %}" class="nav-menu-link nav-link ">Servicios</a></li>
+                <li class="nav-menu-item"><a href="{% url 'buscarServicio' %}" class="nav-menu-link nav-link ">Buscar servicios</a></li>
             </ul>
             <h1>hola</h1>
         </nav>
