--- a/assamble/principal/templates/editar_servicio.html
+++ b/assamble/principal/templates/editar_servicio.html
@@ -15,7 +15,7 @@
     }
 </style>
 
-<form action="{url 'editar_servicio' servicio.id}" method="POST">
+<form action="{% url 'editar_servicio' servicio.id %}" method="POST">
 
     {% csrf_token %}
 
