--- a/assamble/principal/templates/editar_servicio.html
+++ b/assamble/principal/templates/editar_servicio.html
@@ -15,9 +15,10 @@
     }
 </style>
 
-<form action="{url 'editar_servicio' servicio.id}" method="POST">
+<form action="{% url 'editar_servicio' servicio.id %}" method="POST">
 
     {% csrf_token %}
+    
 
     <p>Nombre del servicio:</p>
     {{mi_formulario.nombre_servicio}}
