--- a/assamble/principal/templates/ingresar2.html
+++ b/assamble/principal/templates/ingresar2.html
@@ -11,7 +11,7 @@
     <form class="login-form" method ="POST">
         {% csrf_token %}
         {{form.as_p}}
-        <button type="submit"> enviar</button>
+        <button type="submit">Iniciar sesiónr</button>
     </form>
 </div>
 
