se agregaron los servicios

--- a/assamble/principal/templates/servicios_usuario.html
+++ b/assamble/principal/templates/servicios_usuario.html
@@ -20,9 +20,9 @@
         <tbody>
             {% for n in servicios %}
             <tr>
-                <th scope="row">{{n.id}}</th>
+                <th scope="row"></th>
                 <td>{{n.nombre_servicio}}</td>
-                <td>{{n.precio_servicio}}</td>
+                <td>{{n.precio_servicio}} <b>pesos</b></td>
                 <td>{{n.calidad_servicio}}</td>
                 <td>{{n.descripcion_producto}}</td>
             </tr>
