--- a/assamble/principal/templates/servicios_usuario.html
+++ b/assamble/principal/templates/servicios_usuario.html
@@ -1,12 +1,21 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+
+{% extends "padre_usuario.html" %}
+
+{% load static %}
+
+
+{% block contenido %}
+<div>
+<style>
+  div{
+    color: white;
+
+  }
+  th{
+    margin: 50px;
+  }
+</style>
+
     <table class="table">
         <thead>
           <tr>
@@ -29,5 +38,5 @@
             {% endfor %}
         </tbody>
       </table>
-</body>
-</html>
+    </div>
+      {% endblock %}
