--- a/assamble/principal/templates/buscar_servicio.html
+++ b/assamble/principal/templates/buscar_servicio.html
@@ -1,12 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{% extends 'padre_usuario.html' %}
+
+{% load static %}
+
+{% block contenido %}
+
+<style>
+    h1{
+        color: white;
+    }
+</style>
 
     <h1>Buscar servicio: </h1>
 
@@ -17,6 +19,5 @@
         <input type="submit" value="Buscar">
 
     </form>
-    
-</body>
-</html>
+
+{% endblock %}
